package app;

public interface KebijakanPenggunaan {
    String getAturan();
    boolean bolehReservasi(int durasiJam);
}
