package app;

public interface PabrikRuangan {
    Ruangan buatRuangan();
    KomponenFasilitas buatFasilitasBawaan();
}
