package app;

public interface StrategiHarga {
    double hitung(Reservasi reservasi);
}
