classDiagram
    direction LR

    class Utama {
      +main(String[] args)
    }

    %% Abstract Factory
    class PabrikRuangan {
      <<interface>>
      +buatRuangan() Ruangan
      +buatFasilitasBawaan() KomponenFasilitas
    }
    class PabrikRuangDiskusi
    class PabrikRuangPresentasi
    class PabrikRuangMultimedia
    PabrikRuangan <|.. PabrikRuangDiskusi
    PabrikRuangan <|.. PabrikRuangPresentasi
    PabrikRuangan <|.. PabrikRuangMultimedia

    %% Bridge
    class Ruangan {
      <<interface>>
      +getJenis() String
      +getKebijakan() KebijakanPenggunaan
      +getFasilitas() KomponenFasilitas
      +getTarifDasarPerJam() double
      +salin() Ruangan
    }
    class RuanganDasar
    Ruangan <|.. RuanganDasar

    class KebijakanPenggunaan {
      <<interface>>
      +getAturan() String
      +bolehReservasi(int) boolean
    }
    class KebijakanRuangDiskusi
    class KebijakanRuangPresentasi
    class KebijakanRuangMultimedia
    KebijakanPenggunaan <|.. KebijakanRuangDiskusi
    KebijakanPenggunaan <|.. KebijakanRuangPresentasi
    KebijakanPenggunaan <|.. KebijakanRuangMultimedia
    RuanganDasar --> KebijakanPenggunaan : uses

    %% Decorator
    class DekoratorRuangan
    Ruangan <|.. DekoratorRuangan
    DekoratorRuangan --> Ruangan : wraps

    %% Composite
    class KomponenFasilitas {
      <<interface>>
      +getDeskripsi() String
      +getBiaya() double
    }
    class Fasilitas
    class PaketFasilitas {
      +tambah(KomponenFasilitas) PaketFasilitas
      +getItem() List~KomponenFasilitas~
    }
    KomponenFasilitas <|.. Fasilitas
    KomponenFasilitas <|.. PaketFasilitas
    PaketFasilitas o-- KomponenFasilitas : contains
    Ruangan --> KomponenFasilitas : has

    %% Strategy
    class StrategiHarga {
      <<interface>>
      +hitung(Reservasi) double
    }
    class StrategiHargaPerJam
    class StrategiHargaPaket
    class StrategiHargaEvent
    StrategiHarga <|.. StrategiHargaPerJam
    StrategiHarga <|.. StrategiHargaPaket
    StrategiHarga <|.. StrategiHargaEvent

    %% State
    class StatusReservasi {
      <<interface>>
      +getNama() String
      +setujui(Reservasi)
      +mulai(Reservasi)
      +selesai(Reservasi)
      +batalkan(Reservasi)
    }
    class StatusDiminta
    class StatusDisetujui
    class StatusDipakai
    class StatusSelesai
    class StatusDibatalkan
    StatusReservasi <|.. StatusDiminta
    StatusReservasi <|.. StatusDisetujui
    StatusReservasi <|.. StatusDipakai
    StatusReservasi <|.. StatusSelesai
    StatusReservasi <|.. StatusDibatalkan

    %% Builder + Core domain
    class Reservasi {
      +getId() String
      +getNamaMahasiswa() String
      +getRuangan() Ruangan
      +getDurasiJam() int
      +getFasilitas() KomponenFasilitas
      +getStrategiHarga() StrategiHarga
      +getCatatan() String
      +getStatus() String
      +setujui()
      +mulai()
      +selesai()
      +batalkan()
      +hitungTotalBiaya() double
    }
    class Reservasi.Builder {
      +id(String) Builder
      +namaMahasiswa(String) Builder
      +ruangan(Ruangan) Builder
      +durasiJam(int) Builder
      +fasilitas(KomponenFasilitas) Builder
      +strategiHarga(StrategiHarga) Builder
      +catatan(String) Builder
      +bangun() Reservasi
    }
    Reservasi --> StatusReservasi : state
    Reservasi --> Ruangan
    Reservasi --> StrategiHarga
    Reservasi --> KomponenFasilitas
    Reservasi ..> Reservasi.Builder : builds

    %% Command
    class Perintah {
      <<interface>>
      +eksekusi()
      +batal()
    }
    class PerintahReservasi
    class PerintahBatal
    Perintah <|.. PerintahReservasi
    Perintah <|.. PerintahBatal

    %% Service + History
    class LayananReservasi {
      +tambahReservasi(Reservasi)
      +ambilReservasi(String) Reservasi
      +batalkanReservasi(String)
      +selesaiReservasi(String)
      +getReservasiAktif() List~Reservasi~
      +getRiwayat() List~Reservasi~
    }
    class RiwayatReservasi {
      +catat(Reservasi)
      +getSemua() List~Reservasi~
    }
    LayananReservasi o-- RiwayatReservasi
    LayananReservasi --> Reservasi
    PerintahReservasi --> LayananReservasi
    PerintahBatal --> LayananReservasi
